# agent

./: QUICKSTART.md  README.md  bugfree_cli.py  demo.py  main.py  pyproject.toml  run_bugfree.py  test_error.py  test_errors.py  test_live.py  test_mvp.py  test_with_bugfree.py
bugfree/: __init__.py
bugfree/agents/: __init__.py  code_agent.py  log_agent.py  process_monitor.py
bugfree/core/: __init__.py  orchestrator.py
bugfree/mcp/: __init__.py  client.py  server.py  websocket_server.py
bugfree/models/: __init__.py  error_models.py  mcp_models.py
bugfree/test/: run_week1_tests.py  test_connectivity.py  test_core_system.py  test_core_system_simple.py  test_error_flow.py  test_network.py
bugfree/utils/: __init__.py  file_utils.py  log_utils.py
tmp/: test_errors.err
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  types.d.ts
